<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.example.jose.remme.Activities.MainTabsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:orientation="horizontal">


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="4"
            tools:ignore="NestedWeights">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/forte"
                android:text="@string/tv_title_app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TextView
                android:id="@+id/tv_loginMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/book_antiqua"
                android:text="@string/online"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/colorPrimary"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/ic_settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:src="@drawable/ic_options_black_24dp"
            android:tint="@color/colorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:background="@color/colorAccent">

    </LinearLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/main_tabLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:tabTextAppearance="@style/customfontstyle"
        android:background="@android:color/white"
        app:tabIndicatorColor="@color/colorPrimary"
        app:tabSelectedTextColor="@color/colorPrimary"
        app:tabTextColor="@color/colorAccent">


        <android.support.design.widget.TabItem
            android:id="@+id/tab_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundTint="@color/colorWhitePus"
            android:text="@string/to_do" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_chores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chores" />


    </android.support.design.widget.TabLayout>

    <FrameLayout
        android:id="@+id/mainFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"
        android:background="@color/colorWhitePus">


    </FrameLayout>

</LinearLayout>
